// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessDialogHeader renders correctly with all props and slots filled 1`] = `
<div
  class="wb-ui-processdialog-header"
>
  <button>
    safe action
  </button>
   
  <h1
    class="wb-ui-processdialog-header__title"
  >
    
		title
	
  </h1>
   
  <button>
    primary action
  </button>
</div>
`;

exports[`ProcessDialogHeader renders correctly without slots filled 1`] = `
<div
  class="wb-ui-processdialog-header"
>
  <div />
   
  <h1
    class="wb-ui-processdialog-header__title"
  >
    
		title
	
  </h1>
   
  <div />
</div>
`;
